--- a/index.html
+++ b/index.html
@@ -18,14 +18,17 @@
         <div class="headcontent">
             <div class="menulabel">
                 <div class="label">
-                    Logo
+                    <div class="cuadro">
+                    </div>
+                    <div class="myname">Бойко В.</div>
                 </div>
                 <div class="nav">
-                    <a href="#" class="hvr-grow">Главная</a>
+                    <a href="#" >Главная</a>
                     <a href="#" >Услуги</a>
                     <a href="#" >Работы</a>
                     <a href="#" >Калькулятор</a>
                     <a href="#" >Контакты</a>
+                    <div class="line"></div>
                 </div>
             </div>
         </div>
