--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
                     <div class="line"></div>
                 </div>
             </div>
+            <div class="mainhead">
+                <h1>Разработка сайтов под ключ и не только</h1>
+                <div class="linebottom"></div>
+                <p class="headabout">тут типа разрабатываю и т.д.</p>
+            </div>
         </div>
     </header>
     
