--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="static/css/header.css" rel="stylesheet">
     <link href="static/css/menu.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
     <title>WebCraft</title>
 </head>
 <body>
@@ -34,8 +34,9 @@
             <div class="mainhead">
                 <h1>Разработка сайтов под ключ и не только</h1>
                 <div class="linebottom"></div>
-                <p class="headabout">тут типа разрабатываю и т.д.</p>
+                <p class="headabout">Я разрабатываю, кодирую и продаю десятки сайтов в год. Это дает мне уникальный взгляд на внутреннюю работу и стратегии многих компаний. Я вижу, что работает, а что нет. Я применю этот опыт в вашей организации, чтобы дать вам конкурентное преимущество.</p>
             </div>
+            <button href="" class="addtiket">Оставить заявку</button>
         </div>
     </header>
     
