--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link href="static/css/main.css" rel="stylesheet">
     <link href="static/css/header.css" rel="stylesheet">
     <link href="static/css/menu.css" rel="stylesheet">
+    <link href="static/css/content.css" rel="stylesheet">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
     <title>WebCraft</title>
 </head>
 <body>
@@ -32,13 +34,74 @@
                 </div>
             </div>
             <div class="mainhead">
-                <h1>Разработка сайтов под ключ и не только</h1>
+                <div class="heahh">
+                    <h1>Разработка сайтов под ключ</h1>
+                    <h1 class="blur"> и не только</h1>
+                </div>
+                
                 <div class="linebottom"></div>
                 <p class="headabout">Я разрабатываю, кодирую и продаю десятки сайтов в год. Это дает мне уникальный взгляд на внутреннюю работу и стратегии многих компаний. Я вижу, что работает, а что нет. Я применю этот опыт в вашей организации, чтобы дать вам конкурентное преимущество.</p>
             </div>
             <button href="" class="addtiket">Оставить заявку</button>
         </div>
     </header>
-    
+
+    <div class="content">
+        <h2>Какие задачи решает собственный сайт</h2>
+        <div class="linebottom"></div>
+
+
+        <div class="tasks">
+            <div class="task">
+                <div class="cuad">
+                    <p>1</p>
+                    <div class="linebottomtask"></div>
+                </div>
+                <h3>продвижение товаров и услуг</h3>
+            </div>
+
+            <div class="task">
+                <div class="cuad">
+                    <p>1</p>
+                    <div class="linebottomtask"></div>
+                </div>
+                <h3>продвижение товаров и услуг</h3>
+            </div>
+
+            <div class="task">
+                <div class="cuad">
+                    <p>1</p>
+                    <div class="linebottomtask"></div>
+                </div>
+                <h3>продвижение товаров и услуг</h3>
+            </div>
+
+            <div class="task">
+                <div class="cuad">
+                    <p>1</p>
+                    <div class="linebottomtask"></div>
+                </div>
+                <h3>продвижение товаров и услуг</h3>
+            </div>
+
+            <div class="task">
+                <div class="cuad">
+                    <p>1</p>
+                    <div class="linebottomtask"></div>
+                </div>
+                <h3>продвижение товаров и услуг</h3>
+            </div>
+
+            <div class="task">
+                <div class="cuad">
+                    <p>1</p>
+                    <div class="linebottomtask"></div>
+                </div>
+                <h3>продвижение товаров и услуг</h3>
+            </div>
+        </div>
+
+
+    </div>
 </body>
 </html>
