--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="static/css/header.css" rel="stylesheet">
     <link href="static/css/menu.css" rel="stylesheet">
     <link href="static/css/content.css" rel="stylesheet">
+    <link href="static/css/servises.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -103,5 +104,26 @@
 
 
     </div>
+    <div class="servmain">
+        <div class="servises">
+            <h2>Услуги</h2>
+            <div class="linebottom"></div>
+
+            <div class="servcontainer">
+                <div class="servnames">
+                    <p>Создание дизайна <div class="round"></div></p>
+                    <p>Создание дизайна <div class="round"></div></p>
+                    <p>Создание дизайна <div class="round"></div></p>
+                    <p>Создание дизайна <div class="round"></div></p>
+                    <p>Создание дизайна <div class="round"></div></p>
+                </div>
+                <div class="servabout">
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+    
 </body>
 </html>
