--- a/index.html
+++ b/index.html
@@ -111,18 +111,69 @@
 
             <div class="servcontainer">
                 <div class="servnames">
-                    <p>Создание дизайна <div class="round"></div></p>
-                    <p>Создание дизайна <div class="round"></div></p>
-                    <p>Создание дизайна <div class="round"></div></p>
-                    <p>Создание дизайна <div class="round"></div></p>
-                    <p>Создание дизайна <div class="round"></div></p>
-                </div>
-                <div class="servabout">
+                    <div class="sername active"><p class="pserv">Создание дизайна</p><div class="round"></div></div>
+                    <div class="sername"><p class="pserv">Верстка сайта</p><div class="round"></div></div>
+                    <div class="sername"><p class="pserv">Адаптация под разнве устройства</p><div class="round"></div></div>
+                    <div class="sername"><p class="pserv">Разработка серверной части</p><div class="round"></div></div>
+                    <div class="sername"><p class="pserv">Создание страницы администрирования</p><div class="round"></div></div>
+                    <div class="sername"><p class="pserv">Регистрация домена</p><div class="round"></div></div>
+                    <div class="sername"><p class="pserv">Публикация сайта</p><div class="round"></div></div>
+                    <div class="sername"><p class="pserv">Обучение управлению содержимым</p><div class="round"></div></div>
 
+                </div>
+
+                <div class="servabout">
+                    <div class="servabout">
+                        <h3>Создание дизайна</h3>
+                        <p>sdfsdfsdfsdfsdfsdfsd df sdf sdfsdfsd fsdfsdf dsf dsfds fdsfdsfds fdsfdsf olutions. Мы реализуем проекты различной сложности и масштабов: посадочные страницы, корпоративные сайты, онлайн-магазины, мобильные приложения и многое другое.
+                        </p>
+                    </div>
+
+                    <div class="servabout">
+                        <h3>Создание www</h3>
+                        <p>sdfsdfsdfsdfsdfsdfsd df sdf sdfsdfsd fsdfsdf dsf dsfds fdsfdsfds fdsfdsf olutions. Мы реализуем проекты различной сложности и масштабов: посадочные страницы, корпоративные сайты, онлайн-магазины, мобильные приложения и многое другое.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+
+    <div class="otherservs">
+        <h2>Дополнительные услуги</h2>
+        <div class="linebottom"></div>
+        
+        <div class="otherservcontainer">
+            <div class="otherservnames">
+                <div class="othersername otheractive"><p class="otherpserv">Создание дизайна</p><div class="otherround"></div></div>
+                <div class="othersername"><p class="otherpserv">Верстка сайта</p><div class="otherround"></div></div>
+                <div class="othersername"><p class="otherpserv">Адаптация под разнве устройства</p><div class="otherround"></div></div>
+                <div class="othersername"><p class="otherpserv">Разработка серверной части</p><div class="otherround"></div></div>
+                <div class="othersername"><p class="otherpserv">Создание страницы администрирования</p><div class="otherround"></div></div>
+                <div class="othersername"><p class="otherpserv">Регистрация домена</p><div class="otherround"></div></div>
+                <div class="othersername"><p class="otherpserv">Публикация сайта</p><div class="otherround"></div></div>
+                <div class="othersername"><p class="otherpserv">Обучение управлению содержимым</p><div class="otherround"></div></div>
+
+            </div>
+
+            <div class="otherservabout">
+                <div class="otherservabout">
+                    <h3>Создание дизайна</h3>
+                    <p>sdfsdfsdfsdfsdfsdfsd df sdf sdfsdfsd fsdfsdf dsf dsfds fdsfdsfds fdsfdsf olutions. Мы реализуем проекты различной сложности и масштабов: посадочные страницы, корпоративные сайты, онлайн-магазины, мобильные приложения и многое другое.
+                    </p>
+                </div>
+
+                <div class="otherservabout">
+                    <h3>Создание www</h3>
+                    <p>sdfsdfsdfsdfsdfsdfsd df sdf sdfsdfsd fsdfsdf dsf dsfds fdsfdsfds fdsfdsf olutions. Мы реализуем проекты различной сложности и масштабов: посадочные страницы, корпоративные сайты, онлайн-магазины, мобильные приложения и многое другое.
+                    </p>
                 </div>
             </div>
 
         </div>
+
     </div>
     
 </body>
