--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="tasks">
             <div class="task">
                 <div class="cuad">
-                    <p>1</p>
+                    <p class="num">1</p>
                     <div class="linebottomtask"></div>
                 </div>
                 <h3>Продвижение товаров и услуг</h3>
@@ -68,7 +68,7 @@
 
             <div class="task">
                 <div class="cuad">
-                    <p>2</p>
+                    <p class="num">2</p>
                     <div class="linebottomtask"></div>
                 </div>
                 <h3>Повышение лояльности существующих клиентов</h3>
@@ -76,7 +76,7 @@
 
             <div class="task">
                 <div class="cuad">
-                    <p>3</p>
+                    <p class="num">3</p>
                     <div class="linebottomtask"></div>
                 </div>
                 <h3>Предоставление подробной информации об осуществляемой деятельности</h3>
@@ -84,7 +84,7 @@
 
             <div class="task">
                 <div class="cuad">
-                    <p>4</p>
+                    <p class="num">4</p>
                     <div class="linebottomtask"></div>
                 </div>
                 <h3>Привлечение новых клиентов и партнеров</h3>
@@ -92,7 +92,7 @@
 
             <div class="task">
                 <div class="cuad">
-                    <p>5</p>
+                    <p class="num">5</p>
                     <div class="linebottomtask"></div>
                 </div>
                 <h3>Расширение географии оказания услуг и продаж</h3>
@@ -100,7 +100,7 @@
 
             <div class="task">
                 <div class="cuad">
-                    <p>6</p>
+                    <p class="num">6</p>
                     <div class="linebottomtask"></div>
                 </div>
                 <h3>Привлечение новых каналов сбыта</h3>
