--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
                 </div>
 
-                <div class="servabout">
+                <div class="servsabout">
                     <div class="servabout">
                         <h3>Создание дизайна</h3>
                         <p>sdfsdfsdfsdfsdfsdfsd df sdf sdfsdfsd fsdfsdf dsf dsfds fdsfdsfds fdsfdsf olutions. Мы реализуем проекты различной сложности и масштабов: посадочные страницы, корпоративные сайты, онлайн-магазины, мобильные приложения и многое другое.
@@ -137,9 +137,46 @@
 
                     <div class="servabout">
                         <h3>Создание www</h3>
+                        <p>222222df dsf dsfds fdsfdsfds fdsfdsf olutions. Мы реализуем проекты различной сложности и масштабов: посадочные страницы, корпоративные сайты, онлайн-магазины, мобильные приложения и многое другое.
+                        </p>
+                    </div>
+
+                    <div class="servabout">
+                        <h3>Создание дизайна</h3>
+                        <p>sdfsfds fdsfdsfdктадочныое другое.
+                        </p>
+                    </div>
+
+                    <div class="servabout">
+                        <h3>Создание www</h3>
+                        <p>222222df dsf dsfds fdsfdsfds fdsfdsf olutions. Мы реализуем проекты различной сложности и масштабов: посадочные страницы, корпоративные сайты, онлайн-магазины, мобильные приложения и многое другое.
+                        </p>
+                    </div>
+
+                    <div class="servabout">
+                        <h3>Создание дизайна</h3>
                         <p>sdfsdfsdfsdfsdfsdfsd df sdf sdfsdfsd fsdfsdf dsf dsfds fdsfdsfds fdsfdsf olutions. Мы реализуем проекты различной сложности и масштабов: посадочные страницы, корпоративные сайты, онлайн-магазины, мобильные приложения и многое другое.
                         </p>
                     </div>
+
+                    <div class="servabout">
+                        <h3>Создание www</h3>
+                        <p>222222df dsf dsfds fdsfdsfds fdsfdsf olutions. Мы реализуем проекты различной сложности и масштабов: посадочные страницы, корпоративные сайты, онлайн-магазины, мобильные приложения и многое другое.
+                        </p>
+                    </div>
+
+                    <div class="servabout">
+                        <h3>Создание дизайна</h3>
+                        <p>sdfsdfsdfsdfsdfsdfsd df sdf sdfsdfsd fsdfsdf dsf dsfds fdsfdsfds fdsfdsf olutions. Мы реализуем проекты различной сложности и масштабов: посадочные страницы, корпоративные сайты, онлайн-магазины, мобильные приложения и многое другое.
+                        </p>
+                    </div>
+
+                    <div class="servabout">
+                        <h3>Создание www</h3>
+                        <p>222222df dsf dsfds fdsfdsfds fdsfdsf olutions. Мы реализуем проекты различной сложности и масштабов: посадочные страницы, корпоративные сайты, онлайн-магазины, мобильные приложения и многое другое.
+                        </p>
+                    </div>
+
                 </div>
 
             </div>
@@ -213,4 +250,5 @@
 
 </body>
 <script src="static/js/menu.js"></script>
+<script src="static/js/services.js"></script>
 </html>
