--- a/index.html
+++ b/index.html
@@ -200,7 +200,6 @@
                     <div class="othersername"><p class="otherpserv">Регистрация домена</p><div class="otherround"></div></div>
                     <div class="othersername"><p class="otherpserv">Публикация сайта</p><div class="otherround"></div></div>
                     <div class="othersername"><p class="otherpserv">Обучение управлению содержимым</p><div class="otherround"></div></div>
-    
                 </div>
                 
                 <div class="otherservsabout">
@@ -217,7 +216,7 @@
                     </div>
 
                     <div class="otherservabout">
-                        <h3>Создание дизайна</h3>
+                        <h3>Создание rrr</h3>
                         <p>sdfsdfsdfsdfsdfsdfsd df sdf sdfsdfsd fsdfsdf dsf dsfds fdsfdsfds fdsfdsf olutions. Мы реализуем проекты различной сложности и масштабов: посадочные страницы, корпоративные сайты, онлайн-магазины, мобильные приложения и многое другое.
                         </p>
                     </div>
@@ -261,6 +260,21 @@
     <div class="tech">
         <h2>Используемые технологии</h2>
         <div class="linebottom"></div>
+
+        <div class="techs">
+            <div class="techno">
+                <img src="static/img/django-13-1175187.png" alt="">
+            </div>
+            <div class="techno" >
+                <img src="static/img/cpps.png" alt="">
+            </div>
+            <div class="techno">
+                <img src="static/img/css.png" alt="">
+            </div>
+            <div class="techno">
+                <img src="static/img/html.png" alt="">
+            </div>
+        </div>
 
     </div>
 
