--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="servnames">
                     <div class="sername active"><p class="pserv">Создание дизайна</p><div class="round"></div></div>
                     <div class="sername"><p class="pserv">Верстка сайта</p><div class="round"></div></div>
-                    <div class="sername"><p class="pserv">Адаптация под разнве устройства</p><div class="round"></div></div>
+                    <div class="sername"><p class="pserv">Адаптация под разные устройства</p><div class="round"></div></div>
                     <div class="sername"><p class="pserv">Разработка серверной части</p><div class="round"></div></div>
                     <div class="sername"><p class="pserv">Создание страницы администрирования</p><div class="round"></div></div>
                     <div class="sername"><p class="pserv">Регистрация домена</p><div class="round"></div></div>
@@ -131,50 +131,59 @@
                 <div class="servsabout">
                     <div class="servabout">
                         <h3>Создание дизайна</h3>
-                        <p>sdfsdfsdfsdfsdfsdfsd df sdf sdfsdfsd fsdfsdf dsf dsfds fdsfdsfds fdsfdsf olutions. Мы реализуем проекты различной сложности и масштабов: посадочные страницы, корпоративные сайты, онлайн-магазины, мобильные приложения и многое другое.
+                        <p>Одним из первоначальных этапов при разработке и запуске любого бизнес проекта в Интернет является веб-дизайн сайта. 
+                            Именно от его индивидуальности в определенной мере будет зависеть успешность Вашего дела. Ведь, как человек, который
+                             обладает яркой, запоминающейся внешностью, всегда будет выделяться среди людской толпы,
+                             так и web-страницы должны быть уникальными и неповторимыми, чтобы не затеряться во всемирной паутине.
                         </p>
                     </div>
 
                     <div class="servabout">
-                        <h3>Создание www</h3>
-                        <p>222222df dsf dsfds fdsfdsfds fdsfdsf olutions. Мы реализуем проекты различной сложности и масштабов: посадочные страницы, корпоративные сайты, онлайн-магазины, мобильные приложения и многое другое.
+                        <h3>Верстка сайта</h3>
+                        <p>Понятие верстки позаимствовано из издательской деятельности, где в книгах, журналах и газетах 
+                            информацию располагали продуманно, особым образом. Главная цель верстки, в том числе и верстки сайта,
+                             — расположить текстовые и графические элементы так, чтобы читателю было максимально удобно и интересно усваивать информацию.
                         </p>
                     </div>
 
                     <div class="servabout">
-                        <h3>Создание дизайна</h3>
-                        <p>sdfsfds fdsfdsfdктадочныое другое.
+                        <h3>Адаптация под разные устройства</h3>
+                        <p>Адаптация сайта под смартфоны и планшеты необходима, поскольку больше 48% пользователей (по данным Яндекс.Радара)
+                             пользуются интернетом именно с мобильных устройств. Для поисковых систем адаптивность сайта — один из важных факторов ранжирования.
                         </p>
                     </div>
 
                     <div class="servabout">
-                        <h3>Создание www</h3>
-                        <p>222222df dsf dsfds fdsfdsfds fdsfdsf olutions. Мы реализуем проекты различной сложности и масштабов: посадочные страницы, корпоративные сайты, онлайн-магазины, мобильные приложения и многое другое.
+                        <h3>Разработка серверной части</h3>
+                        <p>Большинство крупных веб-сайтов используют программирование серверной части чтобы динамично отображать различные данные при 
+                            необходимости, в основном взятые из базы данных, располагающейся на сервере и отправляемые клиенту для отображения через 
+                            некоторый код (например, HTML и JavaScript).
                         </p>
                     </div>
 
                     <div class="servabout">
-                        <h3>Создание дизайна</h3>
-                        <p>sdfsdfsdfsdfsdfsdfsd df sdf sdfsdfsd fsdfsdf dsf dsfds fdsfdsfds fdsfdsf olutions. Мы реализуем проекты различной сложности и масштабов: посадочные страницы, корпоративные сайты, онлайн-магазины, мобильные приложения и многое другое.
+                        <h3>Создание страницы администрирования</h3>
+                        <p>Администрирование сайта является следующим этапом после разработки сайта. Только благодаря администрированию Ваш сайт 
+                            будет живым, актуальным и свежим. При правильном администрировании также происходит автоматическое продвижение сайта белым способом.
+                        </p>
+                        <p></p>
+                    </div>
+
+                    <div class="servabout">
+                        <h3>Регистрация домена</h3>
+                        <p>У любого сайта есть длинный числовой IP-адрес и простое доменное имя. Таким образом, домен нужен для того, чтобы идентифицировать 
+                            веб-сайт в Интернете и упростить запоминание адреса для пользователей.
                         </p>
                     </div>
 
                     <div class="servabout">
-                        <h3>Создание www</h3>
-                        <p>222222df dsf dsfds fdsfdsfds fdsfdsf olutions. Мы реализуем проекты различной сложности и масштабов: посадочные страницы, корпоративные сайты, онлайн-магазины, мобильные приложения и многое другое.
-                        </p>
+                        <h3>Публикация сайта</h3>
+                        <p>Публикация сайта означает загрузку Web-страниц, шрифтов и графических файлов, составляющих ваш сайт, на Web-сервер.</p>
                     </div>
 
                     <div class="servabout">
-                        <h3>Создание дизайна</h3>
-                        <p>sdfsdfsdfsdfsdfsdfsd df sdf sdfsdfsd fsdfsdf dsf dsfds fdsfdsfds fdsfdsf olutions. Мы реализуем проекты различной сложности и масштабов: посадочные страницы, корпоративные сайты, онлайн-магазины, мобильные приложения и многое другое.
-                        </p>
-                    </div>
-
-                    <div class="servabout">
-                        <h3>Создание www</h3>
-                        <p>222222df dsf dsfds fdsfdsfds fdsfdsf olutions. Мы реализуем проекты различной сложности и масштабов: посадочные страницы, корпоративные сайты, онлайн-магазины, мобильные приложения и многое другое.
-                        </p>
+                        <h3>Обучение управлению содержимым</h3>
+                        <p>Научу управлять текстовым и графическим наполнением веб-сайта, предоставляя пользователю удобные инструменты хранения и публикации информации независимо от уровня его квалификации.</p>
                     </div>
 
                 </div>
@@ -270,6 +279,9 @@
             </div>
             <div class="techno">
                 <img src="static/img/css.png" alt="">
+            </div>
+            <div class="techno">
+                <img src="static/img/html.png" alt="">
             </div>
             <div class="techno">
                 <img src="static/img/html.png" alt="">
