--- a/index.html
+++ b/index.html
@@ -125,7 +125,6 @@
                     <div class="sername"><p class="pserv">Регистрация домена</p><div class="round"></div></div>
                     <div class="sername"><p class="pserv">Публикация сайта</p><div class="round"></div></div>
                     <div class="sername"><p class="pserv">Обучение управлению содержимым</p><div class="round"></div></div>
-
                 </div>
 
                 <div class="servsabout">
@@ -272,21 +271,48 @@
 
         <div class="techs">
             <div class="techno">
-                <img src="static/img/django-13-1175187.png" alt="">
-            </div>
-            <div class="techno" >
-                <img src="static/img/cpps.png" alt="">
+                <img src="static/img/html.png" alt="">
             </div>
             <div class="techno">
                 <img src="static/img/css.png" alt="">
             </div>
             <div class="techno">
-                <img src="static/img/html.png" alt="">
+                <img src="static/img/js.png" alt="">
             </div>
             <div class="techno">
-                <img src="static/img/html.png" alt="">
+                <img src="static/img/jquery.png" alt="">
             </div>
-        </div>
+            <div class="techno">
+                <img src="static/img/psql.png" alt="">
+            </div>
+            <div class="techno">
+                <img src="static/img/AJAX_logo.png" alt="">
+            </div>
+            <div class="techno">
+                <img src="static/img/django-13-1175187.png" alt="">
+            </div>
+            <div class="techno">
+                <img src="static/img/json-logo.png" alt="">
+            </div>
+            <div class="techno">
+                <img src="static/img/bash.png" alt="">
+            </div>
+            <div class="techno">
+                <img src="static/img/cpps.png" alt="">
+            </div>
+            <div class="techno">
+                <img src="static/img/github.png" alt="">
+            </div>
+            <div class="techno">
+                <img src="static/img/python.png" alt="">
+            </div>
+            <div class="techno">
+                <img src="static/img/apache.png" alt="">
+            </div>
+            <div class="techno">
+                <img src="static/img/Nginx-Logo.png" alt="">
+            </div>
+            
 
     </div>
 
@@ -299,8 +325,24 @@
     <div class="calcmain">
 
         <div class="calc">
-            <h2>Калькулятор</h2>
+            <h2 style="color: aliceblue;">Калькулятор</h2>
             <div class="linebottom"></div>
+
+            <div class="servnames">
+                <div class="sername"><div class="round"></div><p class="pserv">Создание дизайна сайта</p></div>
+                <div class="sername"><div class="round"></div><p class="pserv">Верстка сайта</p></div>
+                <div class="sername"><div class="round"></div><p class="pserv">Адаптация под мобильный вид</p></div>
+                <div class="sername"><div class="round"></div><p class="pserv">Разработка серверной части</p></div>
+                <div class="sername"><div class="round"></div><p class="pserv">Разработка системы управления содержимым</p></div>
+                <div class="sername"><div class="round"></div><p class="pserv">Регистрация доменного имени</p></div>
+                <div class="sername"><div class="round"></div><p class="pserv">Размещение сайта на хостинге</p></div>
+                <div class="sername"><div class="round"></div><p class="pserv">Размещение сайта на виртуальном или выделенном сервере</p></div>
+                <div class="sername"><div class="round"></div><p class="pserv">Обучение управлению содержимым</p></div>
+
+
+
+            </div>
+
         </div>
 
     </div>
