--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="static/css/menu.css" rel="stylesheet">
     <link href="static/css/content.css" rel="stylesheet">
     <link href="static/css/servises.css" rel="stylesheet">
+    <link href="static/css/calc.css" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -328,25 +329,20 @@
             <h2 style="color: aliceblue;">Калькулятор</h2>
             <div class="linebottom"></div>
 
-            <div class="servnames">
-                <div class="sername"><div class="round"></div><p class="pserv">Создание дизайна сайта</p></div>
-                <div class="sername"><div class="round"></div><p class="pserv">Верстка сайта</p></div>
-                <div class="sername"><div class="round"></div><p class="pserv">Адаптация под мобильный вид</p></div>
-                <div class="sername"><div class="round"></div><p class="pserv">Разработка серверной части</p></div>
-                <div class="sername"><div class="round"></div><p class="pserv">Разработка системы управления содержимым</p></div>
-                <div class="sername"><div class="round"></div><p class="pserv">Регистрация доменного имени</p></div>
-                <div class="sername"><div class="round"></div><p class="pserv">Размещение сайта на хостинге</p></div>
-                <div class="sername"><div class="round"></div><p class="pserv">Размещение сайта на виртуальном или выделенном сервере</p></div>
-                <div class="sername"><div class="round"></div><p class="pserv">Обучение управлению содержимым</p></div>
-
-
+            <div class="calcnames">
+                <div class="calcname"><div class="round"></div><p class="calcserv">Создание дизайна сайта </p>от <p class="cost">3000</p> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Верстка сайта </p>от <p class="cost">3000</p> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Адаптация под мобильный вид </p>от <p class="cost">3000</p> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Разработка серверной части </p>от <p class="cost">3000</p> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Разработка системы управления содержимым </p>от <p class="cost">3000</p> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Регистрация доменного имени </p>от <p class="cost">3000</p> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Размещение сайта на хостинге </p>от <p class="cost">3000</p> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Размещение сайта на виртуальном или выделенном сервере </p>от <p class="cost">3000</p> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Обучение управлению содержимым </p>от <p class="cost">3000</p> р</div>
+                <div class="result"><p class="res">Итого: </p><p class="resultcost">от 3 000 р</p></div>
             </div>
-
         </div>
-
     </div>
-
-   
     
 
 
