--- a/index.html
+++ b/index.html
@@ -330,16 +330,16 @@
             <div class="linebottom"></div>
 
             <div class="calcnames">
-                <div class="calcname"><div class="round"></div><p class="calcserv">Создание дизайна сайта </p>от <p class="cost">3000</p> р</div>
-                <div class="calcname"><div class="round"></div><p class="calcserv">Верстка сайта </p>от <p class="cost">3000</p> р</div>
-                <div class="calcname"><div class="round"></div><p class="calcserv">Адаптация под мобильный вид </p>от <p class="cost">3000</p> р</div>
-                <div class="calcname"><div class="round"></div><p class="calcserv">Разработка серверной части </p>от <p class="cost">3000</p> р</div>
-                <div class="calcname"><div class="round"></div><p class="calcserv">Разработка системы управления содержимым </p>от <p class="cost">3000</p> р</div>
-                <div class="calcname"><div class="round"></div><p class="calcserv">Регистрация доменного имени </p>от <p class="cost">3000</p> р</div>
-                <div class="calcname"><div class="round"></div><p class="calcserv">Размещение сайта на хостинге </p>от <p class="cost">3000</p> р</div>
-                <div class="calcname"><div class="round"></div><p class="calcserv">Размещение сайта на виртуальном или выделенном сервере </p>от <p class="cost">3000</p> р</div>
-                <div class="calcname"><div class="round"></div><p class="calcserv">Обучение управлению содержимым </p>от <p class="cost">3000</p> р</div>
-                <div class="result"><p class="res">Итого: </p><p class="resultcost">от 3 000 р</p></div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Создание дизайна сайта </p>от <span class="cost">3000</span> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Верстка сайта </p>от <span class="cost">3000</span> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Адаптация под мобильный вид </p>от <span class="cost">3000</span> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Разработка серверной части </p>от <span class="cost">3000</span> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Разработка системы управления содержимым </p>от <span class="cost">3000</span> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Регистрация доменного имени </p>от <span class="cost">3000</span> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Размещение сайта на хостинге </p>от <span class="cost">3000</span> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Размещение сайта на виртуальном или выделенном сервере </p>от <span class="cost">3000</span> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Обучение управлению содержимым </p>от <span class="cost">3000</span> р</div>
+                <div class="result"><p class="res">Итого: </p><p class="resultcost">от 0 р</p></div>
             </div>
         </div>
     </div>
@@ -350,4 +350,5 @@
 </body>
 <script src="static/js/menu.js"></script>
 <script src="static/js/services.js"></script>
+<script src="static/js/calc.js"></script>
 </html>
