--- a/index.html
+++ b/index.html
@@ -330,15 +330,15 @@
             <div class="linebottom"></div>
 
             <div class="calcnames">
-                <div class="calcname"><div class="round"></div><p class="calcserv">Создание дизайна сайта </p>от <span class="cost">3000</span> р</div>
-                <div class="calcname"><div class="round"></div><p class="calcserv">Верстка сайта </p>от <span class="cost">3000</span> р</div>
-                <div class="calcname"><div class="round"></div><p class="calcserv">Адаптация под мобильный вид </p>от <span class="cost">3000</span> р</div>
-                <div class="calcname"><div class="round"></div><p class="calcserv">Разработка серверной части </p>от <span class="cost">3000</span> р</div>
-                <div class="calcname"><div class="round"></div><p class="calcserv">Разработка системы управления содержимым </p>от <span class="cost">3000</span> р</div>
-                <div class="calcname"><div class="round"></div><p class="calcserv">Регистрация доменного имени </p>от <span class="cost">3000</span> р</div>
-                <div class="calcname"><div class="round"></div><p class="calcserv">Размещение сайта на хостинге </p>от <span class="cost">3000</span> р</div>
-                <div class="calcname"><div class="round"></div><p class="calcserv">Размещение сайта на виртуальном или выделенном сервере </p>от <span class="cost">3000</span> р</div>
-                <div class="calcname"><div class="round"></div><p class="calcserv">Обучение управлению содержимым </p>от <span class="cost">3000</span> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Создание дизайна сайта </p>от <span class="cost">1000</span> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Верстка сайта </p>от <span class="cost">2000</span> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Адаптация под мобильный вид </p>от <span class="cost">700</span> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Разработка серверной части </p>от <span class="cost">2000</span> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Разработка системы управления содержимым </p>от <span class="cost">1500</span> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Регистрация доменного имени </p>от <span class="cost">бесплатно</span> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Размещение сайта на хостинге </p>от <span class="cost">500</span> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Размещение сайта на виртуальном или выделенном сервере </p>от <span class="cost">1000</span> р</div>
+                <div class="calcname"><div class="round"></div><p class="calcserv">Обучение управлению содержимым </p>от <span class="cost">бесплатно</span> р</div>
                 <div class="result"><p class="res">Итого: </p><p class="resultcost">от 0 р</p></div>
             </div>
         </div>
