--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="static/css/content.css" rel="stylesheet">
     <link href="static/css/servises.css" rel="stylesheet">
     <link href="static/css/calc.css" rel="stylesheet">
+    <link href="static/css/flipbox.css" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -271,49 +272,154 @@
         <div class="linebottom"></div>
 
         <div class="techs">
-            <div class="techno">
-                <img src="static/img/html.png" alt="">
+
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="static/img/html.png" alt="Аватар">
+                  </div>
+                  <div class="flip-card-back">
+                    <p>Тут будет что-то написано про технологию</p>
+                  </div>
+                </div>
             </div>
-            <div class="techno">
-                <img src="static/img/css.png" alt="">
+
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="static/img/css.png" alt="Аватар">
+                  </div>
+                  <div class="flip-card-back">
+                    <p>Тут будет что-то написано про технологию</p>
+                  </div>
+                </div>
             </div>
-            <div class="techno">
-                <img src="static/img/js.png" alt="">
-            </div>
-            <div class="techno">
-                <img src="static/img/jquery.png" alt="">
-            </div>
-            <div class="techno">
-                <img src="static/img/psql.png" alt="">
-            </div>
-            <div class="techno">
-                <img src="static/img/AJAX_logo.png" alt="">
-            </div>
-            <div class="techno">
-                <img src="static/img/django-13-1175187.png" alt="">
-            </div>
-            <div class="techno">
-                <img src="static/img/json-logo.png" alt="">
-            </div>
-            <div class="techno">
-                <img src="static/img/bash.png" alt="">
-            </div>
-            <div class="techno">
-                <img src="static/img/cpps.png" alt="">
-            </div>
-            <div class="techno">
-                <img src="static/img/github.png" alt="">
-            </div>
-            <div class="techno">
-                <img src="static/img/python.png" alt="">
-            </div>
-            <div class="techno">
-                <img src="static/img/apache.png" alt="">
-            </div>
-            <div class="techno">
-                <img src="static/img/Nginx-Logo.png" alt="">
+
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="static/img/js.png" alt="Аватар">
+                  </div>
+                  <div class="flip-card-back">
+                    <p>Тут будет что-то написано про технологию</p>
+                  </div>
+                </div>
             </div>
             
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="static/img/jquery.png" alt="Аватар">
+                  </div>
+                  <div class="flip-card-back">
+                    <p>Тут будет что-то написано про технологию</p>
+                  </div>
+                </div>
+            </div>
+
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="static/img/psql.png" alt="Аватар">
+                  </div>
+                  <div class="flip-card-back">
+                    <p>Тут будет что-то написано про технологию</p>
+                  </div>
+                </div>
+            </div>
+
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="static/img/AJAX_logo.png" alt="Аватар">
+                  </div>
+                  <div class="flip-card-back">
+                    <p>Тут будет что-то написано про технологию</p>
+                  </div>
+                </div>
+            </div>
+            
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="static/img/django-13-1175187.png" alt="Аватар">
+                  </div>
+                  <div class="flip-card-back">
+                    <p>Тут будет что-то написано про технологию</p>
+                  </div>
+                </div>
+            </div>
+
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="static/img/json-logo.png" alt="Аватар">
+                  </div>
+                  <div class="flip-card-back">
+                    <p>Тут будет что-то написано про технологию</p>
+                  </div>
+                </div>
+            </div>
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="static/img/bash.png" alt="Аватар">
+                  </div>
+                  <div class="flip-card-back">
+                    <p>Тут будет что-то написано про технологию</p>
+                  </div>
+                </div>
+            </div>
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="static/img/cpps.png" alt="Аватар">
+                  </div>
+                  <div class="flip-card-back">
+                    <p>Тут будет что-то написано про технологию</p>
+                  </div>
+                </div>
+            </div>
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="static/img/github.png" alt="Аватар">
+                  </div>
+                  <div class="flip-card-back">
+                    <p>Тут будет что-то написано про технологию</p>
+                  </div>
+                </div>
+            </div>
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="static/img/python.png" alt="Аватар">
+                  </div>
+                  <div class="flip-card-back">
+                    <p>Тут будет что-то написано про технологию</p>
+                  </div>
+                </div>
+            </div>
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="static/img/apache.png" alt="Аватар">
+                  </div>
+                  <div class="flip-card-back">
+                    <p>Тут будет что-то написано про технологию</p>
+                  </div>
+                </div>
+            </div>
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="static/img/Nginx-Logo.png" alt="Аватар">
+                  </div>
+                  <div class="flip-card-back">
+                    <p>Тут будет что-то написано про технологию</p>
+                  </div>
+                </div>
+            </div>
 
     </div>
 
