--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a href="#main" >Главная</a>
                     <a href="#serv" >Услуги</a>
                     <a href="#" >Работы</a>
-                    <a href="#" >Калькулятор</a>
+                    <a href="#calc" >Калькулятор</a>
                     <a href="#" >Контакты</a>
                     <div class="line"></div>
                 </div>
@@ -429,7 +429,7 @@
 
     </div>
 
-    <div class="calcmain">
+    <div id="calc" class="calcmain">
 
         <div class="calc">
             <h2 style="color: aliceblue;">Калькулятор</h2>
